--- a/jupiter.ipynb
+++ b/jupiter.ipynb
@@ -24,10 +24,9 @@
     "\n",
     "vectorizer = TfidfVectorizer(min_df=5)\n",
     "X = vectorizer.fit_transform(data_train['FullDescription'])\n",
-    "# enc = DictVectorizer()\n",
-    "# X_train_categ = enc.fit_transform(data_train[['LocationNormalized', 'ContractTime']].to_dict('records'))\n",
-    "# X_test_categ = enc.transform(data_test[['LocationNormalized', 'ContractTime']].to_dict('records'))\n",
-    "# from scipy.sparse import hstack\n",
+    "enc = DictVectorizer()\n",
+    "X_train_categ = enc.fit_transform(data_train[['LocationNormalized', 'ContractTime']].to_dict('records'))\n",
+    "X_test_categ = enc.transform(data_test[['LocationNormalized', 'ContractTime']].to_dict('records'))\n",
     "\n",
     "# contcatenate_train_data = hstack((data_train, X_train_categ))\n",
     "# contcatenate_test_data = hstack((data_test, X_test_categ))"
