--- a/jupiter.ipynb
+++ b/jupiter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -18,18 +18,22 @@
     "\n",
     "data_train['FullDescription'] = data_train['FullDescription'].str.lower()\n",
     "data_train['LocationNormalized'] = data_train['LocationNormalized'].str.lower()\n",
-    "data_train['FullDescription'] = data_train['FullDescription'].replace('[^a-zA-Z0-9]', ' ', regex = True)\n",
+    "\n",
+    "data_train['FullDescription'] = data_train['FullDescription'].replace('[^a-zA-Z0-9]', ' ', regex=True)\n",
     "data_train['LocationNormalized'].fillna('nan', inplace=True)\n",
     "data_train['ContractTime'].fillna('nan', inplace=True)\n",
     "\n",
     "vectorizer = TfidfVectorizer(min_df=5)\n",
-    "X = vectorizer.fit_transform(data_train['FullDescription'])\n",
+    "X_tfid_train = vectorizer.fit_transform(data_train['FullDescription'])\n",
+    "\n",
     "enc = DictVectorizer()\n",
     "X_train_categ = enc.fit_transform(data_train[['LocationNormalized', 'ContractTime']].to_dict('records'))\n",
     "X_test_categ = enc.transform(data_test[['LocationNormalized', 'ContractTime']].to_dict('records'))\n",
     "\n",
-    "# contcatenate_train_data = hstack((data_train, X_train_categ))\n",
-    "# contcatenate_test_data = hstack((data_test, X_test_categ))"
+    "contcatenate_train_data = hstack((X_tfid_train, X_train_categ))\n",
+    "# contcatenate_test_data = hstack((data_test, X_test_categ))\n",
+    "\n",
+    "# print(contcatenate_train_data)"
    ]
   },
   {
@@ -51,7 +55,7 @@
     }
    ],
    "source": [
-    "X"
+    ""
    ]
   },
   {
@@ -986,7 +990,7 @@
     }
    ],
    "source": [
-    "data_train"
+    ""
    ]
   },
   {
@@ -1006,9 +1010,7 @@
     }
    ],
    "source": [
-    "enc = DictVectorizer()\n",
-    "X_train_categ = enc.fit_transform(data_train[['LocationNormalized', 'ContractTime']].to_dict('records'))\n",
-    "X_train_categ"
+    ""
    ]
   },
   {
