--- a/jup.ipynb
+++ b/jup.ipynb
@@ -2,24 +2,158 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "data = pandas.read_csv('gbm-data.csv')\n",
+    "y = data.iloc[:, 0]\n",
+    "X = data.iloc[:, 1:]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.8, random_state=241)\n",
+    "learning_rate = [1, 0.5, 0.3, 0.2, 0.1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1.         0.         0.49700901 ... 0.         0.         0.        ]\n [1.         0.36666667 0.60629148 ... 0.         1.         0.        ]\n [1.         0.0333     0.48012427 ... 0.         0.         0.        ]\n ...\n [0.         0.2        0.52056377 ... 0.         0.         0.        ]\n [1.         0.1        0.7656462  ... 0.         0.         0.        ]\n [0.         0.13333333 0.53395198 ... 0.         0.         0.        ]]\n"
+      "      Iter       Train Loss   Remaining Time \n         1           1.1255           11.99s\n         2           1.0035           11.51s\n         3           0.9386           11.52s\n         4           0.8844           10.49s\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         5           0.8381           10.20s\n         6           0.7995            9.61s\n         7           0.7559            9.33s\n         8           0.7205            9.30s\n         9           0.6958            9.04s\n        10           0.6725            8.82s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        20           0.4672            7.61s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        30           0.3179            7.24s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        40           0.2274            6.94s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        50           0.1774            6.45s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        60           0.1394            6.06s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        70           0.1050            5.77s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        80           0.0805            5.42s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        90           0.0650            5.03s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       100           0.0511            4.73s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       200           0.0058            1.51s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GradientBoostingClassifier(criterion='friedman_mse', init=None,\n              learning_rate=0.5, loss='deviance', max_depth=3,\n              max_features=None, max_leaf_nodes=None,\n              min_impurity_decrease=0.0, min_impurity_split=None,\n              min_samples_leaf=1, min_samples_split=2,\n              min_weight_fraction_leaf=0.0, n_estimators=250,\n              presort='auto', random_state=241, subsample=1.0,\n              verbose=True, warm_start=False)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
     "\n",
-    "data = pandas.read_csv('gbm-data.csv').values\n",
-    "print(data)"
+    "clf = GradientBoostingClassifier(n_estimators=250, verbose=True, random_state=241, learning_rate=learning_rate[1])\n",
+    "clf.fit(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "error_train = clf.staged_decision_function(X_train)\n",
+    "error_test = clf.staged_decision_function(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'generator' object has no attribute 'shape'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-e3984a1bc665>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0merror_test\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'generator' object has no attribute 'shape'"
+     ],
+     "output_type": "error"
+    }
+   ],
+   "source": [
+    "error_test.shape()"
    ]
   },
   {
